<resources>
    <string name="app_name">PADC-MyanmarAttractions</string>
    <string name="action_settings">Settings</string>

    <string name="home_screen_title">Myanmar\'s Attractions</string>

    <string name="attraction_list_detail_transition_name">attraction_list_detail_transition_name</string>
    <string name="action_share">Share</string>

    <string name="left_menu_login"> Login </string>
    <string name="left_menu_register"> Register </string>
    <string name="btn_login"> LogIn </string>
    <string name="lbl_password"> Password </string>
    <string name="lbl_username"> Username </string>
    <string name="lbl_email"> Email </string>
    <string name="lbl_dateofbirth"> Date of Birth </string>
    <string name="lbl_countryoforigin"> Country </string>
    <string name="btn_register"> Register </string>

</resources>
