<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Form"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium2">

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fab_height"
            android:hint="@string/lbl_username"
            android:textColor="@color/colorAccent"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium2">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_loginevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium3"
        android:background="@color/colorBlue"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_login"
        android:textStyle="bold"
        android:shadowColor="@color/shadowColor"
        android:textColor="@color/colorGradient"/>


</LinearLayout>
